--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-gaugejs",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "React wrapper for Gauge.js",
   "main": "Gauge.js",
   "scripts": {
@@ -29,7 +29,7 @@
     "react": "^16.9.0"
   },
   "peerDependencies": {
-    "react": ">=16.8.0"
+    "react": "^16.8.0"
   },
   "dependencies": {
     "gaugeJS": "^1.3.7"
