--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "react-gaugejs",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "React wrapper for Gauge.js",
-  "main": "Gauge.js",
+  "main": "dist/Gauge.js",
+  "module": "dist/Gauge.js",
+  "typings": "dist/Gauge.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf dist && NODE_ENV=production babel . --out-dir dist --copy-files --ignore \"node_modules/**/*.js\""
   },
   "repository": {
     "type": "git",
@@ -21,6 +24,10 @@
   },
   "homepage": "https://github.com/keanemind/react-gaugejs#readme",
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
     "eslint": "^8.1.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.14.3",
